fix script for deploys

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "cd client && yarn start --prefix client",
     "server": "cd server && yarn dev --prefix server",
     "start:dev": "concurrently 'yarn server' 'yarn client'",
-    "heroku-postbuild": "cd server && NPM_CONFIG_PRODUCTION=false yarn --prefix client && yarn build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --prefix client && yarn build --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.1.0"
