--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "client": "yarn build --prefix client",
-    "server": "yarn start --prefix server",
+    "build": "cd client && yarn build",
+    "install-client": "cd client && yarn install",
+    "client": "cd client && yarn start",
+    "start": "cd server && yarn start",
     "start:dev": "concurrently 'yarn server' 'yarn client'",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --prefix client && yarn build --prefix client"
+    "heroku-postbuild": "yarn install-client && yarn build"
   },
   "dependencies": {
     "concurrently": "^5.1.0"
