--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "build": "cd client && yarn build",
+    "install-client": "cd client && yarn install",
+    "heroku-postbuild": "yarn install-client && yarn build"
   },
   "dependencies": {
     "cors": "^2.8.5",
