--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "cd client && yarn build",
+    "build": "cd server && cd client && yarn build",
     "install-client": "cd client && yarn install",
-    "client": "cd client && yarn start",
+    "client": "cd server && cd client && yarn start",
     "start": "cd server && yarn start",
-    "start:dev": "concurrently 'yarn server' 'yarn client'",
+    "start:dev": "concurrently 'yarn start' 'yarn client'",
     "heroku-postbuild": "yarn install-client && yarn run build"
   },
   "dependencies": {
