--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "cd server && cd client && yarn start",
     "start": "cd server && yarn start",
     "start:dev": "concurrently 'yarn start' 'yarn client'",
-    "heroku-postbuild": "YARN_PRODUCTION=false yarn install-client && yarn run build --prefix client"
+    "heroku-postbuild": "YARN_PRODUCTION=false yarn install-client && \"cd server && cd client && yarn build\""
   },
   "dependencies": {
     "concurrently": "^5.1.0"
